<resources>

    <string name="app_name">Wedding Snap</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Wedding Snap</string>
    <string name="title_activity_image_view">Photo View</string>
    <string name="title_activity_image_details">Photo Details</string>
	<string name="details">Details</string>
	<string name="camera">Camera:</string>
	<string name="dateTaken">Taken on: </string>
	<string name="exposure">Exposure:</string>
	<string name="focal">Focal Length:</string>
	<string name="iso">ISO Speed:</string>
	<string name="flash">Flash:</string>
	<string name="aperture">Aperture:</string>
	<string name="notavailable"> - NA -</string>
	<string name="please_wait">Please wait</string>
	<string name="no_connection">No Data connection available. Please turn on data services.</string>
	<string name="unknown_error">An unknown error occured. Please try again</string>
	<string name="fetching_data">Please wait, fetching images...</string>
	<string name="fetching_image">Please wait, fetching image...</string>
	<string name="menu_refresh">Refresh</string>
	<string name="no_image">Image cannot be downloaded due to some problem</string>
	<string name="image_saved">Image saved successfully</string>
	<string name="image_not_saved">Image was not saved.Please try again</string>
	<string name="no_image_info">Cannot fetch information about the image</string>
</resources>