<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
		        android:id="@+id/txtTaken"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/dateTaken"
		        android:layout_weight="1" 
		        />

            <TextView
               android:id="@+id/txtTakenTxt"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_marginLeft="10dp"
               android:text="@string/notavailable" />
             
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
             <TextView
		        android:id="@+id/txtCamera"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/camera"
		        android:layout_weight="1" 
		        />

            <TextView
               android:id="@+id/txtCameraTxt"
               android:layout_marginLeft="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/notavailable" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
             <TextView
		        android:id="@+id/txtExposure"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/exposure"
		        android:layout_weight="1" 
		        />

            <TextView
               android:id="@+id/txtExposureTxt"
               android:layout_marginLeft="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/notavailable" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
		        android:id="@+id/txtAperture"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/aperture"
		        android:layout_weight="1" 
		        />

            <TextView
               android:id="@+id/txtApertureTxt"
               android:layout_marginLeft="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/notavailable" />
        </TableRow>
        
          <TableRow
            android:id="@+id/tableRow5"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
		        android:id="@+id/txtFocal"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/focal"
		        android:layout_weight="1" 
		        />

            <TextView
               android:id="@+id/txtFocalTxt"
               android:layout_marginLeft="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/notavailable" />
        </TableRow>
        
            <TableRow
            android:id="@+id/tableRow6"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
		        android:id="@+id/txtIso"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/iso"
		        android:layout_weight="1" 
		        />

            <TextView
               android:id="@+id/txtIsoTxt"
               android:layout_marginLeft="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/notavailable" />
        </TableRow>
          
              <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >
            
            <TextView
		        android:id="@+id/txtFlash"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/flash"
		        android:layout_weight="1" 
		        />

            <TextView
               android:id="@+id/txtFlashTxt"
               android:layout_marginLeft="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/notavailable" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
